src/test/ui/attr-usage-repr.stderr
error[E0517]: attribute should be applied to struct, enum, or union
  --> $DIR/attr-usage-repr.rs:3:8
   |
LL | #[repr(C)]
   |        ^
LL | fn f() {}
   | --------- not a struct, enum, or union

error[E0517]: attribute should be applied to enum
  --> $DIR/attr-usage-repr.rs:15:8
   |
LL | #[repr(i8)]
   |        ^^
LL | struct SInt(f64, f64);
   | ---------------------- not an enum

error[E0517]: attribute should be applied to struct or union
  --> $DIR/attr-usage-repr.rs:24:8
   |
LL | #[repr(packed)]
   |        ^^^^^^
LL | enum EPacked { A, B }
   | --------------------- not a struct or union

error[E0517]: attribute should be applied to struct
  --> $DIR/attr-usage-repr.rs:27:8
   |
LL | #[repr(simd)]
   |        ^^^^
LL | enum ESimd { A, B }
   | ------------------- not a struct

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0517`.
